# adx

./: .gitmodules  CMakeLists.txt
src/adx/: constant.hpp  covector.hpp  covector_forward.hpp  derivative.hpp  derivative_forward.hpp  eye.hpp  function.hpp  multiply.hpp  plus.hpp  scaled_eye.hpp  scaled_eye_forward.hpp  tensor.hpp  valence.hpp  var.hpp  var_forward.hpp  vector.hpp  vector_forward.hpp  zero.hpp
src/adx/detail/: always_false.hpp  array.hpp  array_forward.hpp  binary_expression.hpp  common_type.hpp  derivative_traits.hpp  derivative_traits_forward.hpp  extent.hpp  is_instantiation_of.hpp  nullary_expression.hpp  to_std_tuple.hpp  unary_expression.hpp  var_traits.hpp
src/adx/operators/: covector_operators.hpp  eye_operators.hpp  scaled_eye_operators.hpp  vector_operators.hpp  zero_operators.hpp
test/: CMakeLists.txt  main.cpp
test/compile/: CMakeLists.txt  function_01.cpp  multivariate_01.cpp  scalar_01.cpp  tensor_01.cpp  tensor_02.cpp  var_traits_01.cpp  vector_01.cpp
test/unit/: CMakeLists.txt  isclose.hpp  scalar_tests.cpp  tensor_tests.cpp  test_driver.c  unit_tests.c.in  unit_tests.h  unit_tests_forward.h.in  vector_tests.cpp
